# coremodule-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  plugin-mm.json  plugin.json
scripts/svgextract/: svgextract.py  template_module.hh
scripts/svgextract/actions/: coreModule.py  infofile.py
src/: mm-plugin.cc  plugin-mm.cc  plugin-vcv.cc  plugin-vcv.hh  plugin.cc  plugin.hh
src/helpers/: 4ms_elements.hh
src/modules/core/: MYMODULE.hh  MyModule.hh  MyModule2.hh
src/modules/info/: MYMODULE_info.hh  MyModule2_info.hh  MyModule_info.hh
src/modules/vcv/: MyModule2_vcv.cc  MyModule_vcv.cc
src/vcv/: comm_module.cc  comm_module.hh  generic_module.hh
src/vcv/modules/: MYMODULE_vcv.cc  MyModule_vcv.cc
src/vcv/widgets/: vcv_module_creator.hh  vcv_widget_creator.hh
src/vcv/widgets/4ms/: 4ms_widgets.hh  4ms_widgets_implementation.hh
